<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp" >

    <TextView
        android:id="@+id/item_not_in_list_id"
        android:layout_weight="2"
       	style="@style/item_not_in_list_text_style"
        android:text="@string/item_not_in_list_id" />

    <TextView
        android:id="@+id/item_not_in_list_name"
         android:layout_weight="3"
       	style="@style/item_not_in_list_text_style"
        android:text="@string/item_not_in_list_name"/>

    <TextView
        android:id="@+id/item_not_in_list_job_name"
         android:layout_weight="8"
       	style="@style/item_not_in_list_text_style"
        android:text="@string/item_not_in_list_job" />

    <TextView
        android:id="@+id/item_not_in_list_phone_num"
         android:layout_weight="6"
       	style="@style/item_not_in_list_text_style"
        android:text="@string/item_not_in_list_phone" />

    <Button
        android:id="@+id/item_not_in_list_more"
        android:layout_weight="3"
       	style="@style/item_not_in_list_text_style"
        android:text="@string/item_not_in_list_more" />

</LinearLayout>