<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:s="http://schemas.android.com/apk/res/com.shen.hso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:background="@color/yellow"
    android:layout_alignParentTop="true"
    android:id="@+id/sort_item_layout1" >

    <com.shen.hso.widget.CustomSortView
        android:id="@+id/item_not_in_list_id"
        style="@style/sort_item_not_in_list_style"
        android:layout_weight="2"
        android:tag="id"
        s:sort_title_text="@string/item_not_in_list_id" >
    </com.shen.hso.widget.CustomSortView>

    <com.shen.hso.widget.CustomSortView
        android:id="@+id/item_not_in_list_name"
        style="@style/sort_item_not_in_list_style"
        android:layout_weight="3"
        android:tag="name"
        s:sort_title_text="@string/item_not_in_list_name" />

    <com.shen.hso.widget.CustomSortView
        android:id="@+id/item_not_in_list_job_name"
        style="@style/sort_item_not_in_list_style"
        android:layout_weight="8"
        android:tag="jobName"
        s:sort_title_text="@string/item_not_in_list_job" />

    <com.shen.hso.widget.CustomSortView
        android:id="@+id/item_not_in_list_phone_num"
        style="@style/sort_item_not_in_list_style"
        android:layout_weight="6"
        android:tag="phoneNum"
        s:sort_title_text="@string/item_not_in_list_phone" />

    <Button
        android:id="@+id/item_not_in_list_more"
        style="@style/item_not_in_list_text_style"
        android:layout_weight="3"
        android:text="@string/item_not_in_list_more" />

</LinearLayout>