<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shen="http://schemas.android.com/apk/res/com.shen.hso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_round_bg" >

    <LinearLayout
        android:id="@+id/topo_base_info_left_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_round_white_bg"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="50dp" >

        <LinearLayout
            android:id="@+id/circle_view_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <com.shen.hso.widget.CustomCircleView
                android:id="@+id/circle_view"
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:gravity="center"
                shen:circle_ring_color="@color/purple"
                shen:circle_ring_width="20dp"
                shen:first_color="@color/red"
                shen:fourth_color="@color/orangle"
                shen:in_circle_color="@color/cyan"
                shen:inner_circle_radius="30dp"
                shen:out_cirle_radius="40dp"
                shen:second_color="@color/green"
                shen:third_color="@color/blue" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh_time_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh_default_time" />
                </LinearLayout>
            </com.shen.hso.widget.CustomCircleView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online_node_count_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/node_defaut_count_tv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/node_count_unit" />
            </LinearLayout>
        </LinearLayout>
		<View 
		    android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="@color/purple"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="10dp" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                     />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:layout_marginTop="2dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:layout_marginTop="2dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/orangle"
                    android:layout_marginTop="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/first_tv"
                    android:textColor="@color/red"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/second_tv"
                    android:textColor="@color/green" 
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/third_tv"
                    android:textColor="@color/blue"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/fourth_tv"
                    android:textColor="@color/orangle" 
                    android:layout_marginTop="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/device_default_count"
                    android:textColor="@color/red"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/device_default_count"
                    android:textColor="@color/green"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/device_default_count"
                    android:textColor="@color/blue"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/device_default_count"
                    android:textColor="@color/orangle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
	<LinearLayout
	     android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/topo_base_info_left_layout"
        android:orientation="horizontal">
	    <com.shen.hso.widget.CustomNodeView 
	     android:id="@+id/topo_base_node_view"
	     android:layout_width="wrap_content"
        android:layout_height="wrap_content"></com.shen.hso.widget.CustomNodeView>
	</LinearLayout>
</RelativeLayout>