<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bj" >

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textSize="@dimen/activity_splash_title_size"
        android:textColor="@android:color/black" />
    <TextView 
        android:id="@+id/splash_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_title"
        android:layout_alignParentRight="true"
        android:text="@string/splash_author"
        android:textSize="@dimen/activity_splash_author_size"
        android:textColor="@android:color/black"/>
	<TextView 
	    android:id="@+id/splash_percentage"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="10dp"
	    android:text="@string/splash_percentage"
	    android:textSize="@dimen/activtiy_splash_percentage_size"
	    android:textColor="@android:color/black"/>
	<ProgressBar 
	    android:id="@+id/splash_progress"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/splash_percentage"
	    android:layout_marginBottom="10dp"   
        style="?android:attr/progressBarStyleHorizontal"     
	    android:max="100"  
        android:progress="0"  
        android:secondaryProgress="20"
        android:visibility="visible"/>
	
</RelativeLayout>
